// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.md correctly 1`] = `
<div
  class="am-slider-example"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          class="am-slider-handle"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider 带 ToolTip
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          class="am-slider-handle"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider 禁用
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider am-slider-disabled"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          class="am-slider-handle"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider 自定义颜色
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
          style="background-color:blue;"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;background-color:red;"
        />
        <div
          class="am-slider-step"
        />
        <div
          class="am-slider-handle"
          style="left:86.66666666666667%;border-color:red;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/custom-tooltip.md correctly 1`] = `
<div
  class="am-slider-example"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider 自定义 ToolTip
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div>
          <div
            class="am-slider-handle"
            style="left:86.66666666666667%;"
          />
          <div
            style="text-align:center;"
          />
        </div>
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <div
      class="iconWrapper"
    >
      <svg
        class="am-icon am-icon-check-circle am-icon-md anticon-highlight"
      >
        <use
          xlink:href="#check-circle"
        />
      </svg>
      <div
        class="am-slider-wrapper"
      >
        <div
          class="am-slider"
        >
          <div
            class="am-slider-rail"
          />
          <div
            class="am-slider-track"
            style="visibility:visible;left:0%;width:0%;"
          />
          <div
            class="am-slider-step"
          />
          <div
            class="am-slider-handle"
            style="left:0%;"
          />
          <div
            class="am-slider-mark"
          />
        </div>
      </div>
      <svg
        class="am-icon am-icon-cross-circle am-icon-md"
      >
        <use
          xlink:href="#cross-circle"
        />
      </svg>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;
